[package]
name = "pcap"
version = "0.5.1"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2024"
rust-version = "1.93"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.34.0", features = ["rt", "macros", "io-util", "fs"]}
